<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginregis.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="500dp"
        android:src="@drawable/mandala_background2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/iv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login"
        android:textColor="@color/medium_brown"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.dalangapp.customui.MyEditText
        android:id="@+id/id_my_email_et"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_corner"
        android:elevation="8dp"
        android:gravity="start"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login" />

    <com.example.dalangapp.customui.MyPassEditText
        android:id="@+id/id_my_pass_et"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_corner"
        android:elevation="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_my_email_et" />

    <com.example.dalangapp.customui.MyButton
        android:id="@+id/id_my_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="32dp"
        android:enabled="true"
        app:layout_constraintEnd_toEndOf="@+id/id_my_pass_et"
        app:layout_constraintStart_toStartOf="@+id/id_my_pass_et"
        app:layout_constraintTop_toBottomOf="@+id/id_my_pass_et" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/id_my_button"
        app:layout_constraintStart_toStartOf="@id/id_my_button"
        app:layout_constraintTop_toBottomOf="@id/id_my_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/belum_punya_akun" />

        <TextView
            android:id="@+id/id_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/id_my_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/id_my_email_et" />

</androidx.constraintlayout.widget.ConstraintLayout>